--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,9 @@
 <header>
     <h1>{{title}}</h1>
     <app-button
-        color="red"
-        text="Agregar Tarea"
+        color= "{{showAddTask ? 'red' : 'green'}}"
+        text= "{{showAddTask ? 'Cerrar Tarea' : 'Agregar Tarea'}}"
         (btnClick)="toggleAndTask()"
+        *ngIf="hasRoute('/')"
     ></app-button>
 </header>
